# swagger.json
@@ -178,6 +178,29 @@
             "description": "Internal Server Error"
           }
         }
+      },
+      "delete": {
+        "tags": ["application"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/application/position/{position}": {
